# Caso_5_ED

./: CMakeLists.txt  Main.cpp  Makefile  README.md
ADT/: BP_Node.h  BP_Tree.h  Digraph.h  Graph.h  NodeLink.h  PriorityQueue.hpp  Tree.h  TreeNode.h  Vertex.h  graph_demo.cpp  iGraph.h  iNode.h
Output/: GUI.h  Rankings.html  index.html  test.html  test_2.html  test_output.html
contentful/: Registered.h  contenful.cpp  contentful.h  contentful_functions.h  json.hpp
templates/: RankingsTemplate.txt  SankeyDiagram.txt  html_template.txt
utils/: DataTools.h  Date.h  GraphTools.h  GraphUtils.h  Random.h  datetest.cpp  tools_demo.cpp
